--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^2.6.2",
     "jest": "24.8.0",
+    "jest-extended": "^0.11.5",
     "prettier": "^1.14.3",
     "regenerator-runtime": "^0.12.1"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "jest-extended"
+    ]
   }
 }
